Fixed bug #31347 (is_dir and is_file (incorrectly) return true for any string greater then 255 characters).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@203281 c90b9560-bf6c-de11-be94-00142212c4b1